# Stock-Sim

./: Cargo.toml  README.md  Test.stock  TestLongTerm.stock  TestSmall.stock  config.toml
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
src/: dsl.rs  main.rs  simulator.rs  yahoo_finance.rs
vscode-extension/: README.md  package.json
vscode-extension/syntaxes/: stock-dsl.tmLanguage.json
