[package]
name = "stock_simulator"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rust_decimal = "1.35"
toml = "0.9.5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }